--- a/PassaFrase/templates/basic.master
+++ b/PassaFrase/templates/basic.master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>PassaFrase - Genera sicurezza, in italiano</title>
-    <link rel="stylesheet" type="text/css" href="basic.css" />
+    <link rel="stylesheet" type="text/css" href="basic.css" />    
     <link rel="author" href="../humans.txt" />
 
     <!-- RealFaviconGenerator START -->
@@ -39,9 +39,11 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <a href="https://github.com/lucamauri/PassaFrase"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" /></a>
+        <a href="https://github.com/lucamauri/PassaFrase">
+            <img style="position: absolute; top: 0; right: 0; border: 0;z-index:100;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" />
+        </a>
         <div id="containertopmenu" class="genericcontainer">
-            <div class="centered60pc" style="vertical-align:middle">
+            <div class="centered60pc" style="vertical-align: middle">
                 <object data="/graphics/logo/PFLogoSQ.svg" type="image/svg+xml" style="height: 40px">
                     <img src="/graphics/logo/PFLogoSQ.png" style="height: 40px" />
                 </object>
@@ -53,6 +55,9 @@
                     <li><a href="../pages/credits.aspx">Credits</a></li>
                     <li><a href="https://github.com/lucamauri/PassaFrase" target="_new">GitHub</a></li>
                 </ul>
+                <div style="float:right;">
+                <p class="footerinfo" style="font-size:10pt;">Versione <%=GetType(PassaFraseCore.PassaFraseCore).Assembly.GetName().Version.ToString %></p>
+                    </div>
             </div>
         </div>
 
